--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1"
   },
@@ -46,10 +48,13 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-env": "^7.14.0",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "jest": "^26.6.0",
     "lodash": "^4.17.21",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7"
