--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.899.0",
     "bootstrap": "^4.6.0",
     "history": "^4.10.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.25.0",
