--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,13 +51,18 @@
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.14.0",
     "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "fetch-mock": "^9.11.0",
     "jest": "^26.6.0",
     "lodash": "^4.17.21",
+    "moxios": "^0.4.0",
+    "node-fetch": "^2.6.1",
     "redux": "^4.1.0",
-    "redux-form": "^8.3.7"
+    "redux-form": "^8.3.7",
+    "redux-mock-store": "^1.5.4"
   }
 }
