--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.900.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
+    "react-s3-uploader": "^5.0.0",
     "react-scripts": "4.0.3",
+    "s3-upload": "^0.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
