--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "bootstrap": "^4.6.0",
+    "enzyme": "^3.11.0",
     "multiselect-react-dropdown": "^1.6.11",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
