--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.14.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^26.6.3",
@@ -23,6 +23,7 @@
     "multiselect-react-dropdown": "^1.6.11",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
+    "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
     "react-datetime-picker": "^3.2.1",
@@ -31,6 +32,7 @@
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
