--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
+    "react-s3-uploader": "^5.0.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
