--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,10 @@
       ], "@babel/preset-react"],
     "plugins": [
         "@babel/plugin-proposal-class-properties"
-    ]
+    ],
+      "env": {
+        "production": {
+          "plugins": ["transform-es2015-modules-commonjs"]
+        }
+      } 
 }
