--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/preset-env": "^7.14.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -67,7 +66,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/preset-env": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
@@ -86,6 +85,8 @@
     "react-s3-uploader": "^5.0.0",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
