--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^26.6.3",
     "bootstrap": "^4.6.0",
+    "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
